--- a/templates/one_question.html
+++ b/templates/one_question.html
@@ -28,6 +28,7 @@
     {% endfor %}
     <br>
     <br><a href="{{ url_for('delete_question', user=question_id) }}">Delete question</a>
+    <br><a href="{{ url_for('edit_question', user=question_id) }}">Edit question</a>
     <br><br>
     <a href="{{ url_for('route_list')}}">Back to questions list</a>
 </body>
