--- a/static/nowy.css
+++ b/static/nowy.css
@@ -28,6 +28,7 @@ table
     -moz-box-shadow: 5px 5px 50px grey;
     -webkit-box-shadow:5px 5px 50px grey;
     /* określa oceniowanie tabeli za pomocą CSS3*/
+    border-spacing: 0px;
 }
 
 th
