--- a/templates/one_question.html
+++ b/templates/one_question.html
@@ -5,31 +5,49 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='nowy2.css') }}">
     <title>Document</title>
 </head>
 <body>
-    <h1>{{ question[0]['title'] }}</h1>
-    <h3>{{ question[0]['message'] }}</h3>
-    <h4>Votes: {{ question[0]['vote_number'] }}</h4>
-    <a href="{{ url_for('vote_up', user=question_id) }}">Vote Up</a>
-    <a href="{{ url_for('vote_down', user=question_id) }}">Vote Down</a>
-    <br><br><br><a href="{{ url_for('add_new_answer', user=question_id) }}">Add a new answer</a>
-    <br><br><h3><u>Answers:</u></h3>
-    {% for i in range(length) %}
-        {% for key in answers[i].keys() %}
-            {% if key == 'vote_number' %}
-                <h4>{{ i+1 }}. {{ answers[i]['message'] }}</h4>
-                <h4><i>Votes: {{ answers[i][key] }}</i></h4>
-                <a href="{{ url_for('vote_up_answer', answer_id=answers[i]['id']) }}">Vote Up</a>
-                <a href="{{ url_for('vote_down_answer', answer_id=answers[i]['id']) }}">Vote Down</a>
-                <br><a href="{{ url_for('delete_answer', answer_id=answers[i]['id']) }}">Delete {{ i+1 }}. answer</a>
-            {% endif %}
-        {% endfor %}
-    {% endfor %}
-    <br>
-    <br><a href="{{ url_for('delete_question', user=question_id) }}">Delete question</a>
-    <br><a href="{{ url_for('edit_question', user=question_id) }}">Edit question</a>
-    <br><br>
-    <a href="{{ url_for('route_list')}}">Back to questions list</a>
+<div class='container'>
+    <div class="header">
+        <div class="logo">
+            <img src="{{ url_for('static', filename='logo.png') }}">
+        </div>
+    </div>
+    <div class="sekcja">
+        <a href="http://127.0.0.1:5002"><div class="option">Main page</div></a>
+        <div class="option">Log in</div>
+        <div class="option">Sign Up</div>
+        <div class="option">Support</div>
+        <div style="clear:both;"></div>
+    </div>
+    <div class="sekcja" style="min-height: 41px;">
+        <div class="baronequestion">{{ question[0]['title'] }}</div>
+    </div>
+        {#          {{ question[0]['title'] }}#}
+        {#        <h3>{{ question[0]['message'] }}</h3>#}
+        {#        <h4>Votes: {{ question[0]['vote_number'] }}</h4>#}
+        {#        <a href="{{ url_for('vote_up', user=question_id) }}">Vote Up</a>#}
+        {#        <a href="{{ url_for('vote_down', user=question_id) }}">Vote Down</a>#}
+        {#        <br><br><br><a href="{{ url_for('add_new_answer', user=question_id) }}">Add a new answer</a>#}
+        {#        <br><br><h3><u>Answers:</u></h3>#}
+        {#        {% for i in range(length) %}#}
+        {#            {% for key in answers[i].keys() %}#}
+        {#                {% if key == 'vote_number' %}#}
+        {#                    <h4>{{ i+1 }}. {{ answers[i]['message'] }}</h4>#}
+        {#                    <h4><i>Votes: {{ answers[i][key] }}</i></h4>#}
+        {#                    <a href="{{ url_for('vote_up_answer', answer_id=answers[i]['id']) }}">Vote Up</a>#}
+        {#                    <a href="{{ url_for('vote_down_answer', answer_id=answers[i]['id']) }}">Vote Down</a>#}
+        {#                    <br><a href="{{ url_for('delete_answer', answer_id=answers[i]['id']) }}">Delete {{ i+1 }}. answer</a>#}
+        {#                {% endif %}#}
+        {#            {% endfor %}#}
+        {#        {% endfor %}#}
+        {#        <br>#}
+        {#        <br><a href="{{ url_for('delete_question', user=question_id) }}">Delete question</a>#}
+        {#        <br><a href="{{ url_for('edit_question', user=question_id) }}">Edit question</a>#}
+        {#        <br><br>#}
+        {#        <a href="{{ url_for('route_list')}}">Back to questions list</a>#}
+</div>
 </body>
 </html>
