--- a/templates/add.html
+++ b/templates/add.html
@@ -38,7 +38,7 @@
                 <form action="{{ url_for('add_question') }}" method="post">
                 <p class="sekcja1">
                     <label for="title" style="font-size: 20px; letter-spacing: 2px;">Title:</label>
-                    <textarea placeholder="Type title of question." cols="30" rows="3" name="title" id="title" maxlength="100" style="resize: none; margin-left: 37px; "></textarea>
+                    <textarea placeholder="Type title of question(max 100 characters)" cols="30" rows="3" name="title" id="title" maxlength="100" style="resize: none; margin-left: 37px; "></textarea>
                 </p>
                 <p class="sekcja1">
                     <label for="message" style="font-size: 20px; letter-spacing: 2px;">Message:</label>
