--- a/templates/add_answer.html
+++ b/templates/add_answer.html
@@ -5,19 +5,73 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='nowy2.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/fontello.css') }}">
+<style>
+        textarea
+        {
+            background-color: #F3E5AB;
+            font-size: 15px;
+        }
+</style>
 </head>
 <body>
-    <h1>Add new answer</h1>
+<div class='container'>
+        <div class="header">
+            <div class="logo">
+                <img src="{{ url_for('static', filename='logo.png') }}">
+            </div>
+        </div>
+        <div class="sekcja">
+            <a href="http://127.0.0.1:5002"><div class="option">Main page</div></a>
+            <div class="option">Log in</div>
+            <div class="option">Sign Up</div>
+            <div class="option">Support</div>
+            <div style="clear:both;"></div>
+        </div>
+{#    <h1>Add new answer</h1>#}
+     <div class="topbar">
+            <p style="font-size: 25px; margin: 0;">Add new answer</p>
+        </div>
+    <div class="sekcja">
+        <form action="{{ url_for('add_new_answer', user=question_id) }}" method="post">
+            <p class="sekcja1">
+                <label for="message" style="font-size: 20px; letter-spacing: 2px;">Message:</label>
+                <textarea placeholder="Type an answer." cols="90" rows="11" name="message" id="message"></textarea>
+                </p>
 
-    <form action="{{ url_for('add_new_answer', user=question_id) }}" method="post">
-        <label for="message">Message:</label><br>
-        <textarea name="message" id="message"></textarea><br>
-        <br>
-        <label for="image">Image:</label>
-        <input type="file" name="image" id="image"><br>
-        <br>
-        <input type="submit" value="Add">
+{#        <label for="message">Message:</label><br>#}
+{#        <textarea name="message" id="message"></textarea><br>#}
+{#        <br>#}
+{#        <label for="image">Image:</label>#}
+{#        <input type="file" name="image" id="image"><br>#}
+        <p class="sekcja1">
+            <input type="submit" value="Add" style="color: #300E01; background-color: #F3E5AB; font-size: 17px; width: 50px; height: 30px; border: none; border-radius: 3px; cursor: pointer;">
+        </p>
     </form>
+    </div>
+    <table>
+        <div class="socials">
+            <div class="socialdivs">
+                <a href="http://www.facebook.com" style="color: black;"><div class="fb">
+                    <i class="icon-facebook-official"></i>
+                </div></a>
+                <a href="http://www.twitter.com" style="color: black;"><div class="tw">
+                    <i class="icon-twitter"></i>
+                </div></a>
+                <a href="http://www.instagram.com" style="color: black;"><div class="insta">
+                    <i class="icon-instagram"></i>
+                </div></a>
+                <a href="http://www.youtube.com" style="color: black;"><div class="yt">
+                    <i class="icon-youtube"></i>
+                </div></a>
+                <div style="clear:both"></div>
+            </div>
+        </div>
+        </table>
+    <div id="footer"><i>copyright © Sidżej i przyjaciele. Wszelkie prawa zastrzeżone</i>
+    </div>
+
+</div>
 </body>
 </html>
